syntax = "proto3";

package temporal.server.chasm.lib.activity.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/activity/gen/activitypb;activitypb";

import "chasm/lib/activity/proto/v1/request_response.proto";
import "temporal/server/api/routing/v1/extension.proto";

service ActivityService {
    rpc StartActivityExecution(StartActivityExecutionRequest) returns (StartActivityExecutionResponse) {
        option (temporal.server.api.routing.v1.routing).execution_id = "frontend_request.activity_id";
    }

  rpc DescribeActivityExecution(DescribeActivityExecutionRequest) returns (DescribeActivityExecutionResponse) {
//   TODO fix this after build option (temporal.server.api.routing.v1.routing).execution_id = "frontend_request.activity_id";
    option (temporal.server.api.routing.v1.routing).random = true;
  }
}
